# clinic-inventory

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20240101_000001_initial.py
backend/app/: main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: api.py  clinics.py  inventory.py  users.py
backend/app/core/: config.py
backend/app/crud/: __init__.py  base.py  clinic.py  inventory_item.py  supplier.py  user.py
backend/app/db/: session.py
backend/app/models/: __init__.py  clinic.py  inventory_item.py  supplier.py  user.py
backend/app/schemas/: __init__.py  clinic.py  inventory_item.py  supplier.py  user.py
backend/tests/: conftest.py  test_clinic.py  test_inventory.py  test_user.py
docker/postgres/: init-db.sql
docs/: deployment.md
frontend/: Dockerfile  index.html  package.json
frontend/nginx/: default.conf
frontend/src/: App.tsx  styles.css
frontend/src/components/: Layout.tsx
frontend/src/components/charts/: SimpleBarChart.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useInventory.ts
frontend/src/pages/: Dashboard.tsx  InventoryDetail.tsx  InventoryList.tsx  Login.tsx  Reports.tsx
frontend/src/routes/: AppRoutes.tsx  ProtectedRoute.tsx
frontend/src/services/: api.ts
frontend/src/tests/: Dashboard.test.tsx  Login.test.tsx  ProtectedRoute.test.tsx
frontend/src/types/: inventory.ts
frontend/src/utils/: format.ts
(+3 files in other folders)
