[tool.poetry]
name = "clinic-backend"
version = "0.1.0"
description = "Clinic inventory management backend"
authors = ["Clinic Inventory Team <team@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
psycopg = {version = "^3.1.18", extras = ["binary"]}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
